@@ -2735,13 +2735,24 @@ typedef enum {
   #if defined(UNIX_LINUX) && defined(S390_64)
     /* On Linux/s390x:
        MMAP_FIXED_ADDRESS_HIGHEST_BIT = 52
-       CODE_ADDRESS_RANGE   = 0x0000000080000000UL
-       MALLOC_ADDRESS_RANGE = 0x0000000081000000UL ... 0x00000000BE000000UL
-       SHLIB_ADDRESS_RANGE  = 0x000003FFFC000000UL or 0x000003FFFD000000UL
+       CODE_ADDRESS_RANGE   = 0x0000000080000000UL or 0x0000000106000000UL or 0x0000000119000000UL
+       MALLOC_ADDRESS_RANGE = 0x0000000081000000UL ... 0x00000000BE000000UL or 0x000000012x000000UL
+       SHLIB_ADDRESS_RANGE  = 0x000003FF81000000UL ... 0x000003FFFD000000UL
+       STACK_ADDRESS_RANGE  = 0x000003FFC2000000UL ... 0x000003FFFF000000UL
+       On Linux/s390x build.opensuse.org machines:
+       MMAP_FIXED_ADDRESS_HIGHEST_BIT = 62
+       CODE_ADDRESS_RANGE   = 0x0000000001000000UL
+       MALLOC_ADDRESS_RANGE = 0x0000000001000000UL
+       SHLIB_ADDRESS_RANGE  = 0x0000020000000000UL
        STACK_ADDRESS_RANGE  = 0x000003FFFF000000UL
-       There is room from 0x000100000000UL to 0x03FF00000000UL. */
-    #define MAPPABLE_ADDRESS_RANGE_START 0x000100000000UL
-    #define MAPPABLE_ADDRESS_RANGE_END   0x03FEFFFFFFFFUL
+       There is room from 0x000200000000UL to 0x020000000000UL. */
+    /* Force the same CODE_ADDRESS_RANGE across platforms. */
+    #if (CODE_ADDRESS_RANGE < 0x0000000200000000UL)
+      #undef CODE_ADDRESS_RANGE
+      #define CODE_ADDRESS_RANGE 0x00000001FF000000UL
+    #endif
+    #define MAPPABLE_ADDRESS_RANGE_START 0x000200000000UL
+    #define MAPPABLE_ADDRESS_RANGE_END   0x01FFFFFFFFFFUL
   #endif
   #if defined(UNIX_LINUX) && defined(SPARC64)
     /* On Linux 3.2/sparc64:
@@ -3522,8 +3533,8 @@ Long-Float, Ratio and Complex (only if SPVW_MIXED).
   #endif
   #if defined(UNIX_LINUX) && defined(S390_64) /* Linux/s390x */
     #define SINGLEMAP_ADDRESS_BASE 0UL
-    #define SINGLEMAP_TYPE_MASK    0x03F800000000UL
-    #define SINGLEMAP_oint_type_shift 35
+    #define SINGLEMAP_TYPE_MASK    0x01FC00000000UL
+    #define SINGLEMAP_oint_type_shift 34
     #define SINGLEMAP_WORKS 1
   #endif
   #if defined(UNIX_LINUX) && defined(SPARC64) /* Linux/sparc64 */
